# effortless

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  package.xml
cmake/: catch2.cmake  catch2_download.cmake  catkin.cmake
examples/: catch2.cpp  logger.cpp  timer.cpp
include/effortless/: logger.hpp  statistic.hpp  throttler.hpp  timer.hpp
