<?xml version="1.0"?>
<package format="2">
  <name>efforless</name>
  <version>0.0.1</version>
  <description>pure effortless utilities</description>

  <maintainer email="foehnx@gmail.com">foehnx</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
</package>